Fixed the Bleeding of the div and added the font awesome icons

--- a/style.css
+++ b/style.css
@@ -5,65 +5,94 @@
 }
 
 body {
-  background: #fbfbfb;
+  background: #444;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .wrapper {
-  width: 90%;
-  margin: 0% auto;
+  width: 80%;
+  margin: 0 auto;
+  padding: 16px 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-auto-rows: 200px;
-  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(245px, 1fr)); /*225px*/
+  grid-auto-rows: 190px; /*225px*/
+  grid-gap: 5px;
+  justify-items: center;
+  align-items: center; /*end*/
+
 }
 
-.image-container {
-  /* background: #58d5f6; */
-  color: #300;
-  border-image-repeat: stretch;
+.gallery-container {
   position: relative;
+  height: 187px;
+  width: 243px;
 }
 
-.image-container .hover-text {
+.gallery-container img {
   position: absolute;
-  top: 0%;
   height: 100%;
   width: 100%;
+  
+}
+
+.text-overlay {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #cfa125;
   text-align: center;
-  /* visibility: hidden; */
+  z-index: 2;
   opacity: 0;
-  transition: opacity;
+  transition: opacity;  
 }
 
-.image-container:hover .hover-text {
-  /* visibility: visible; */
-  opacity: 1;
-  transition-duration: 1s;
-  transition-timing-function: linear;
+.gallery-container a{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
 }
 
-/* styling */
-.hover-text {
-  font-family: sans-serif;
-  color: white;
-  background: rgba(255, 215, 0, 0.5);
-  text-shadow: 1px 2px 1px black;
-
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-}
-.hover-text a {
-  color: white;
-}
-
-.hover-text h1 {
+.text-overlay h1 {
   color: black;
+  padding: 15px 10px 0px 10px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-shadow: 0px 2px 2px #fff;
 }
-img {
-  /* object-fit: cover; */
-  /* border-image-repeat: stretch; */
-  width: 210px;
-  height: 210px;
-  max-width: 100%;
-  max-height: 100%;
+
+.text-overlay p {
+  text-align: left;
+  padding: 20px;
+  color: white;
+  text-shadow: 0px 2px 2px #111;
 }
+
+.gallery-container:hover .text-overlay{
+    /* set the overlay to visible */
+    opacity: .5;
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1)
+    -moz-transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1)
+}
+
+.gallery-container:hover img{
+    opacity: .6;
+}
+
+#heart-icon{
+  text-align: left;
+  padding-right: 90px;   
+}
+
+#heart-icon:hover i{
+  color: red;
+  cursor: pointer; 
+}
+#share-icon:hover i{
+  color: white;
+  cursor: pointer; 
+  /* font-weight: 300; */
+}
+
+
